changes done on pages

--- a/src/pages/homescreen/homescreen.html
+++ b/src/pages/homescreen/homescreen.html
@@ -11,7 +11,7 @@
         
       </ion-row>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <ion-col class="btn_col"><button  ion-button (click)="signIn()" class="bluebtn" item-left>Sign In</button>
-    <button  ion-button (click)="register()" class="redbtn" item-left>Register</button></ion-col>
+      <ion-col class="btn_col"><button  ion-button (click)="signIn()" class="bluebtn" item-left>Login</button>
+    <button  ion-button (click)="register()" class="redbtn" item-left>Sign up</button></ion-col>
   
   </ion-content>
