--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,8 +10,109 @@
     </ion-buttons>
   </ion-navbar>
 </ion-header>
- 
-<ion-content class="home" padding>
+
+<ion-content class="home">
   <h3>Welcome inside, {{username}}!</h3>
-  Your Email is: {{email}}
-</ion-content> 
+  <p>Your Email is: {{email}}</p>
+  <div class="home-banner"> 
+     <img src="assets/imgs/card-amsterdam.png" alt="banner">
+  </div>
+  <div class="home-blog">
+  <ion-card>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src="assets/imgs/card-saopaolo.png" alt="User">
+        </ion-avatar>
+        <h2>Marty McFly</h2>
+        <p>November 5, 1955</p>
+      </ion-item>
+      <img src="assets/imgs/card-saopaolo.png" alt="user banner">
+      <ion-card-content>
+        <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+      </ion-card-content>
+      <ion-row>
+        <ion-col>
+          <button ion-button icon-left clear small>
+            <ion-icon name="thumbs-up"></ion-icon>
+            <div>12 Likes</div>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button icon-left clear small>
+            <ion-icon name="text"></ion-icon>
+            <div>4 Comments</div>
+          </button>
+        </ion-col>
+        <ion-col center text-center>
+          <ion-note>
+            11h ago
+          </ion-note>
+        </ion-col>
+      </ion-row>
+    </ion-card>
+    <ion-card>
+        <ion-item>
+          <ion-avatar item-start>
+            <img src="assets/imgs/card-sf.png" alt="User">
+          </ion-avatar>
+          <h2>Marty McFly</h2>
+          <p>November 5, 1955</p>
+        </ion-item>
+        <img src="assets/imgs/card-sf.png" alt="user banner">
+        <ion-card-content>
+          <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+        </ion-card-content>
+        <ion-row>
+          <ion-col>
+            <button ion-button icon-left clear small>
+              <ion-icon name="thumbs-up"></ion-icon>
+              <div>12 Likes</div>
+            </button>
+          </ion-col>
+          <ion-col>
+            <button ion-button icon-left clear small>
+              <ion-icon name="text"></ion-icon>
+              <div>4 Comments</div>
+            </button>
+          </ion-col>
+          <ion-col center text-center>
+            <ion-note>
+              11h ago
+            </ion-note>
+          </ion-col>
+        </ion-row>
+      </ion-card>
+      <ion-card>
+          <ion-item>
+            <ion-avatar item-start>
+              <img src="assets/imgs/card-amsterdam.png" alt="User">
+            </ion-avatar>
+            <h2>Marty McFly</h2>
+            <p>November 5, 1955</p>
+          </ion-item>
+          <img src="assets/imgs/card-amsterdam.png" alt="user banner">
+          <ion-card-content>
+            <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+          </ion-card-content>
+          <ion-row>
+            <ion-col>
+              <button ion-button icon-left clear small>
+                <ion-icon name="thumbs-up"></ion-icon>
+                <div>12 Likes</div>
+              </button>
+            </ion-col>
+            <ion-col>
+              <button ion-button icon-left clear small>
+                <ion-icon name="text"></ion-icon>
+                <div>4 Comments</div>
+              </button>
+            </ion-col>
+            <ion-col center text-center>
+              <ion-note>
+                11h ago
+              </ion-note>
+            </ion-col>
+          </ion-row>
+        </ion-card>
+    </div>
+</ion-content>
